tests/baselines/reference/transpile/Generates expected syntactic diagnostics (verbatimModuleSyntax=true).errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
file.ts(1,1): error TS1434: Unexpected keyword or identifier.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== file.ts (1 errors) ====
    a b
    ~
!!! error TS1434: Unexpected keyword or identifier.